Fix Railway deployment: standalone mode with all services

--- a/config/graphd.conf
+++ b/config/graphd.conf
@@ -4,9 +4,10 @@
 # Include main configuration
 --flagfile=/usr/local/nebula/etc/nebula.conf
 
-# GraphD specific settings
+# GraphD specific settings (standalone mode)
 --port=9669
 --ws_http_port=19669
+--local_ip=0.0.0.0
 
 # Daemon settings
 --daemonize=false
