--- a/config/nebula.conf
+++ b/config/nebula.conf
@@ -1,7 +1,7 @@
 # NebulaGraph Configuration File
 # This is the main configuration file for NebulaGraph services
 
-# Meta server addresses
+# Meta server addresses (localhost for standalone mode)
 --meta_server_addrs=127.0.0.1:9559
 
 # Local IP address
