--- a/config/metad.conf
+++ b/config/metad.conf
@@ -12,9 +12,9 @@
 --daemonize=false
 --pid_file=/tmp/nebula-metad.pid
 
-# Meta service settings
+# Meta service settings (standalone mode)
 --meta_server_addrs=127.0.0.1:9559
---local_ip=0.0.0.0
+--local_ip=127.0.0.1
 
 # Data and log paths
 --data_path=/data
